Upgrade to Java 17 (#285)