@@ -1,5 +1,5 @@
 /*
- * Copyright 2021-2024 IEXEC BLOCKCHAIN TECH
+ * Copyright 2021-2025 IEXEC BLOCKCHAIN TECH
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -43,7 +43,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 import static com.iexec.commons.poco.utils.SignatureUtils.signMessageHashAndGetSignature;
 import static com.iexec.sms.MockChainConfiguration.MOCK_CHAIN_PROFILE;
@@ -212,7 +211,7 @@ public class TeeTaskComputeSecretIntegrationTests extends CommonTestSetup {
                 .stream()
                 .map(TeeTaskComputeSecret::getHeader)
                 .map(TeeTaskComputeSecretHeader::getKey)
-                .collect(Collectors.toList());
+                .toList();
         Assertions.assertThat(retrievedKeys)
                 .containsExactlyInAnyOrder("secret-key-1", "secret-key-2", "secret-key-3");
 
